; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/aty/extr_mach64_gx.c_aty_StrobeClock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/aty/extr_mach64_gx.c_aty_StrobeClock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atyfb_par = type { i64 }

@CLOCK_CNTL = common dso_local global i64 0, align 8
@CLOCK_STROBE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.atyfb_par*)* @aty_StrobeClock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @aty_StrobeClock(%struct.atyfb_par* %0) #0 {
  %2 = alloca %struct.atyfb_par*, align 8
  %3 = alloca i32, align 4
  store %struct.atyfb_par* %0, %struct.atyfb_par** %2, align 8
  %4 = call i32 @udelay(i32 26)
  %5 = load i64, i64* @CLOCK_CNTL, align 8
  %6 = load %struct.atyfb_par*, %struct.atyfb_par** %2, align 8
  %7 = call i32 @aty_ld_8(i64 %5, %struct.atyfb_par* %6)
  store i32 %7, i32* %3, align 4
  %8 = load i64, i64* @CLOCK_CNTL, align 8
  %9 = load %struct.atyfb_par*, %struct.atyfb_par** %2, align 8
  %10 = getelementptr inbounds %struct.atyfb_par, %struct.atyfb_par* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = add nsw i64 %8, %11
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @CLOCK_STROBE, align 4
  %15 = or i32 %13, %14
  %16 = load %struct.atyfb_par*, %struct.atyfb_par** %2, align 8
  %17 = call i32 @aty_st_8(i64 %12, i32 %15, %struct.atyfb_par* %16)
  ret void
}

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @aty_ld_8(i64, %struct.atyfb_par*) #1

declare dso_local i32 @aty_st_8(i64, i32, %struct.atyfb_par*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
